--- a/css/style.css
+++ b/css/style.css
@@ -106,7 +106,7 @@ font-family: 'Comfortaa',Bold;
 #gtco-main-nav form a {
   font-family: "OpenSans-Semibold";
   font-size: 18px;
-  color: #5C6E58;
+  color: #03585b;
   padding: 5px 25px;
   border-radius: 20px;
   border-width: 2px;
